Fixed alignment issue on header

--- a/src/partials/global-nav-v2/index.scss
+++ b/src/partials/global-nav-v2/index.scss
@@ -47,7 +47,7 @@
 
     &__links {
         display: flex;
-        align-items: baseline;
+        align-items: center;
 
         @media (max-width: 480px) {
             bottom: 0px;
